--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="search">
                 <input type="" placeholder="search..." class="searchInput">
                 <img class="searcIcon" width="20" height="20" src="./photos/search.png">
+                <div class="noItem">no items found!</div>
             </div>
         </div>
         <div class="navItem">
