--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="sliderWrapper">
             <!-- Item 1  Air force-->
             <div class="sliderItem">
-            <img src="./photos/air.png" alt="" class="sliderImg">
+            <img src="./photos/air.png" alt="" class="sliderImg" id="delayLoad">
             <div class="sliderBg"></div>
             <h1 class="sliderTitle">AIR FORCE <br>NEW SEASON</br></h1>
             <h2 class="sliderprice">$119</h2>
